--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AirHost</title>
+  <title><%= title %></title>
 
   <!-- Main CSS -->
   <link rel="stylesheet" href="/css/style.css">
